# agentic-forecasting

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
implementations/: README.md  __init__.py  pyproject.toml
implementations/boc_rate_decisions/: 02_boc_rate_direction_experiment.ipynb  03_rationale_alignment.ipynb  99_starter_agent.ipynb  README.md  __init__.py  analysis.py  data.py  meeting_schedule.yaml  plots.py  press_releases.py  rationale_eval.py
implementations/economic_forecasting/: README.md  cpi_backtest_demo.ipynb
implementations/energy_oil_forecasting/: 02_intro_agentic_predictor.ipynb  03_one_agent_three_tasks.ipynb  04_systematic_backtest_eval.ipynb  05_adaptive_agent_training.ipynb  05_forecast_tool_demo.ipynb  06_protected_eval.ipynb  99_starter_agent.ipynb  README.md  analysis.py  data.py  tasks.py  viz.py
implementations/experiments/: README.md
implementations/experiments/getting_started/: README.md
implementations/food_price_forecasting/: 02_food_cpi_experiment.ipynb  99_starter_agent.ipynb  README.md  __init__.py  analysis.py  data.py  food_cpi_experiment.ipynb  food_data_exploration.ipynb  plots.py  smoke_report.py
implementations/getting_started/: 00_environment_check.ipynb  01_cpi_data_exploration.ipynb  README.md  cpi_backtest_demo.ipynb  cpi_data_exploration.ipynb
implementations/methods/: README.md
implementations/sp500_forecasting/: 01_sp500_multivariate_backtest.ipynb  99_starter_agent.ipynb  README.md  __init__.py  analysis.py  backtest_grid.py  data.py  plots.py
(+218 files in other folders)
